fix all the new settings

While they were written to the control file, they were not written into
the configuration files from kded and were thus reset after a session restart

BUG: 442520